<resources>
    <!--Main Activity-->
    <string name="app_name">MAI</string>
    <string name="criteria_relative">Отношение критериев</string>
    <string name="command_text_template">Отношение кандидатов по критерию: \n</string>
    <string name="result_text">Результаты</string>
    <string name="next_button_text">Завершить</string>

    <!--Result Activity-->
    <string name="end_button_text">Завершить просмотр</string>

    <!--Start Activity-->
    <string name="start_title_text">Метод Анализа\n Иерархий</string>
    <string name="create_area_title_text">Создание</string>
    <string name="view_area_title_text">Просмотр</string>
    <string name="create_template_button_text">Шаблона</string>
    <string name="fill_mai_button_text">Опроса</string>
    <string name="find_out_mai_button_text">Записи</string>

    <!--Create MAI Template Activity -->
    <string name="input_template_title_text">Введите критерии сравнения</string>
    <string name="add_criteria_button_text">Добавить критерий</string>
    <string name="delete_criteria_button_text">Удалить критерий</string>
    <string name="save_template_button_text">Сохранить шаблон</string>
    <string name="list_of_criteria_item_hint">Критерий</string>

    <string name="title_of_set_name_mai_template_text">Введите название шаблона</string>
    <string name="input_mai_template_name_hint">Название шаблона</string>
    <string name="mai_template_name_button_text">Продолжить</string>

    <!--Create MAI Activity-->
    <string name="title_choose_text">Шаблоны</string>

    <string name="input_candidates_title_text">Введите кандидатов</string>
    <string name="add_candidate_button_text">Добавить кандидата</string>
    <string name="start_answering_button_text">Создать ответ</string>
    <string name="list_of_candidate_item_hint">Кандидат</string>

    <!--GetNameMAINoteActivity -->
    <string name="title_of_get_name_mai_note">Введите название записи</string>
    <string name="input_mai_note_name">Название записи</string>
    <string name="title_check_result_text">Записи опросов</string>

    <!--SettingsActivity -->
    <string name="settings_db_area_title">База данных</string>
    <string name="delete_db_button_text">Очистить</string>

    <!--InfoActivity-->
    <string name="info_text">
        1. Создать шаблон из численно измеряемых критериев
        \n2. Заполнить опрос, выбрав шаблон
        \n3. Просмотреть результат и выбрать кандидата с высшим рейтингом
        \n\n
        <b>Примечание 1:</b> Если вы забыли критерии оценивания шаблона, то <b>зажмите</b> кнопку шаблона
    </string>
    <string name="info_title">Как пользоваться приложением</string>
    <string name="info_fill_note_title">Как заполнить опрос/шаблон</string>
    <string name="fill_instruction_text">
        Требуется ячейку таблицы (например, строка i и столбец j).
        Далее выбрать целое численное значение от 1 до 9.
        \n\n
        <b>Смысл численных значений:</b>
        \n1 - строка i <i>одинаково важна</i> столбцу j
        \n2 - строка i <i>немного важнее</i> столбца j
        \n5 - строка i <i>значительно важнее</i> столбца j
        \n9 - строка i <i>максимально важнее</i> столбца j
        \n\n
        <b>Примечание 1:</b>
        Значения по типу 1/2, 1/3, 1/4 и т.д. являются противоположностью к ранее описанным.
        \n\n
        <b>Примечание 2:</b>
        Если вы вдруг забыли, что означает строка или столбец, то <b>нажмите</b> на название
        (слева или сверху соответственно)
        \n\n
        <b>Примечание 3:</b>
        Cокращение критериев и кандидатов производится по <b>первым трём буквам</b>.
        Порядок следования соблюдается.
    </string>
    <string name="literature_title">Литература</string>
    <string-array name="literature_text">
        <item><u>Таха. Теория игр и принятия решений</u></item>
        <item><u>Лекция 1. Метод анализа иерархий (метод Т.Л. Саати)</u></item>
        <item><u>Т.Саати. Принятие решений. Метод анализа иерархий</u></item>
    </string-array>
    <string-array name="hyperlink_literature">
        <item>https://github.com/ethernet389/Solve-on-Java/blob/main/docs/%D0%A2%D0%B0%D1%85%D0%B0.pdf</item>
        <item>https://github.com/ethernet389/Solve-on-Java/blob/main/docs/lec1_is-2_2020%20(1).pdf</item>
        <item>https://github.com/ethernet389/Solve-on-Java/blob/main/docs/saaty.pdf</item>
    </string-array>

    <!--Error message and not xml headers -->
    <string name="missing_name_message">Название не введено!</string>
    <string name="name_is_busy_message">Название занято!</string>
    <string name="missing_field_name_message">Поле не заполнено!</string>
    <string name="final_rating_header">Общий рейтинг</string>
    <string name="template_content_dialog_header">Критерии:\n</string>
    <string name="database_is_cleared_message">База данных очищена</string>
    <string name="database_is_deleting_message">Для удаления нажмите ещё раз</string>
    <string name="matrix_has_empty_cell_message">Есть пустая ячейка</string>
    <string name="matrix_error_format_message">Неправильный формат числа</string>
    <string name="language_header">Языки</string>
    <string name="russian_language">Русский</string>
    <string name="english_language">English</string>
</resources>