<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <TextView
        android:id="@+id/start_title_text"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:textSize="45sp"
        android:text="@string/start_title_text"
        android:textStyle="bold"
        android:textColor="@color/design_black"
        android:gravity="center"
        android:layout_margin="5dp"
        android:padding="30dp"
        android:background="@drawable/area_shape" />

    <LinearLayout
        android:id="@+id/create_area"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="15dp"
        android:background="@drawable/area_shape"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/create_area_title_text"
            android:textStyle="bold"
            android:textColor="@color/design_black"
            android:gravity="center"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center_horizontal" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/create_template_button"
                android:layout_width="125dp"
                android:layout_height="125dp"
                style="@style/ButtonStyle"
                android:background="@drawable/button_area_shape"
                android:text="@string/create_template_button_text"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <Button
                android:id="@+id/start_mai_button"
                android:layout_width="125dp"
                android:layout_height="125dp"
                style="@style/ButtonStyle"
                android:background="@drawable/button_area_shape"
                android:text="@string/fill_mai_button_text"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_area"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="15dp"
        android:background="@drawable/area_shape"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/view_area_title_text"
            android:textStyle="bold"
            android:textColor="@color/design_black"
            android:gravity="center"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center_horizontal" />
        <Button
            android:id="@+id/check_mai_button"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_gravity="center_horizontal"
            style="@style/ButtonStyle"
            android:background="@drawable/button_area_shape"
            android:text="@string/find_out_mai_button_text"
            android:textSize="20sp"/>
    </LinearLayout>
</LinearLayout>