<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main_programme.activities.create_mai_template_activity.SetNameForMAITemplateActivity">

  <TextView
      android:id="@+id/title_of_set_name_mai_template"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:padding="10sp"
      android:layout_marginTop="20dp"
      android:text="@string/title_of_set_name_mai_template_text"
      android:gravity="center"
      android:textSize="45sp" />

  <EditText
      android:id="@+id/input_mai_template_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/title_of_set_name_mai_template"
      android:hint="@string/input_mai_template_name_hint"
      android:textSize="20sp"
      android:gravity="center"/>

  <com.manojbhadane.QButton
      android:id="@+id/go_next_with_name_button"
      style="@style/QButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20sp"
      android:text="@string/mai_template_name_button_text"
      android:padding="15dp"
      android:textSize="20sp"
      app:layout_constraintTop_toBottomOf="@id/input_mai_template_name"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>