<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".main_programme.activities.create_mai_template.CreateMAITemplateActivity">

    <TextView
        android:id="@+id/mai_template_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextViewStyle"
        android:text="@string/input_template_title_text"
        android:textSize="35sp"
        android:gravity="center" />

    <Button
        android:id="@+id/save_template_button"
        style="@style/ButtonStyle"
        android:background="@drawable/button_area_shape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_template_button_text"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/add_criteria_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ButtonStyle"
        android:background="@drawable/button_area_shape"
        android:layout_gravity="center_horizontal"
        android:text="@string/add_criteria_button_text" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <LinearLayout
            android:id="@+id/criteria_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <include layout="@layout/criteria_table_row"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>