<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:id="@+id/start_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="45sp"
            android:text="@string/start_title_text"
            android:textStyle="bold"
            android:textColor="@color/design_black"
            android:gravity="center"
            android:layout_margin="5dp"
            android:padding="30dp"
            android:background="@drawable/area_shape" />

        <LinearLayout
            android:id="@+id/create_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="15dp"
            android:background="@drawable/area_shape"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/create_area_title_text"
                android:textStyle="bold"
                android:textColor="@color/design_black"
                android:gravity="center"
                android:layout_marginBottom="15dp"
                android:layout_gravity="center_horizontal" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/create_template_button"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    style="@style/ButtonStyle"
                    android:text="@string/create_template_button_text"
                    app:layout_constraintEnd_toStartOf="@id/start_mai_button"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <Button
                    android:id="@+id/start_mai_button"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    style="@style/ButtonStyle"
                    android:text="@string/fill_mai_button_text"
                    app:layout_constraintStart_toEndOf="@id/create_template_button"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="15dp"
            android:background="@drawable/area_shape"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/view_area_title_text"
                android:textStyle="bold"
                android:textColor="@color/design_black"
                android:gravity="center"
                android:layout_marginBottom="15dp"
                android:layout_gravity="center_horizontal" />
            <Button
                android:id="@+id/check_mai_button"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center_horizontal"
                style="@style/ButtonStyle"
                android:text="@string/find_out_mai_button_text" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/special_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:background="@drawable/area_shape"
            android:gravity="end|center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/exit_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/run_man_to_exit"/>
            <ImageView
                android:id="@+id/info_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/info_icon"
                app:layout_constraintEnd_toStartOf="@id/settings_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="20dp"/>
            <ImageView
                android:id="@+id/settings_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/settings_icon" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>